<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainMenuColor">
    <!--tools:context="">-->
    <!--I've must change it last thing'-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="14dp"

        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="0.172"
                android:text="@string/book"
                />
            <ImageView
                android:id="@+id/mapIcon"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_weight="0.09"
                android:src="@drawable/globe_map_icon" />

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.04"
                android:src="@drawable/ssss" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="21dp"
            >

            <Button
                android:id="@+id/btnForBussiness"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="6dp"
                android:layout_weight="0.10"
                android:background="@drawable/button_pink"
                android:text="@string/bussiness"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />


            <Button
                android:id="@+id/bntForFriends"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:layout_weight="0.189"
                android:background="@drawable/button_pink"
                android:text="@string/friends" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"/>

        </LinearLayout>

        <ListView
            android:id="@+id/listViewMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="43dp"
            android:background="@color/colorForListView">
            >
        </ListView>
    </LinearLayout>

</LinearLayout>